Create a seperate config directory for safe mode (linux)
Bug: N/A
Test: N/A
Change-Id: I9d5ade6ef519a74c410d48b3411aa6503195cc20

GitOrigin-RevId: deea72c4f288b130359c29fcdd9b9e2c637d7709